

                 SCons - a software construction tool

                            Change Log


RELEASE  VERSION/DATE TO BE FILLED IN LATER

  From John Doe:

    - Whatever John Doe did.


RELEASE 3.0.4 - Mon, 20 Jan 2019 22:49:27 +0000

  From Mats Wichmann:
    - Improve finding of Microsoft compiler: add a 'products' wildcard
      in case 2017 Build Tools only is installed as it is considered a separate
      product from the default Visual Studio
    - Add TEMPFILESUFFIX to allow a customizable filename extension, as
      described in the patch attached to issue #2431.

  From Daniel Moody:
    - Improved support for VC14.1 and Visual Studio 2017, as well as arm and arm64 targets.
      Issues #3268 & Issue #3222
    - Initial support for ARM targets with Visual Studio 2017 - Issue #3182 (You must set TARGET_ARCH for this to work)
    - Update TempFileMunge class to use PRINT_CMD_LINE_FUNC

  From Tobias Herzog
    - Enhance cpp scanner regex logic to detect if/elif expressions without whitespaces but
      parenthesis like "#if(defined FOO)" or "#elif!(BAR)" correctly.

RELEASE 3.0.3 - Mon, 07 Jan 2019 20:05:22 -0400
  NOTE: 3.0.2 release was dropped because there was a packaging bug. Please consider all 3.0.2
        content.

  From William Deegan:
    - Fixes to packaging logic.  Ensuring the SCons.Tool.clangCommon module is added
      to the release packages.
    - Modify scons.bat script to check for scons python script without .py extension if no file
      scons.py exists. This enables an all platform wheel to work.

  From Mats Wichmann:
    - Update doc examples to work with Python 3.5+:  map() now returns an iterable instead of a list.


RELEASE 3.0.2 - Mon, 31 Dec 2018 16:00:12 -0700

  From Bernard Blackham:
    - Fixed handling of side-effects in task master (fixes #3013).

  From William Deegan:
    - Remove long deprecated SCons.Options code and tests.  This removes BoolOption,EnumOption,